--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,23 +1,25 @@
 name: Build and Push Docker Image
 
-# 触发构建的条件，这里是推送代码到 master/main 分支时触发
+# 触发条件：当代码推送到 main 分支时
 on:
   push:
     branches:
       - main  # 或者 'master'，根据你的默认分支调整
 
-# 定义构建过程
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 使用 GitHub 提供的 Ubuntu 环境
 
     steps:
+    # 1. 检出代码
     - name: Check out code
       uses: actions/checkout@v2
 
+    # 2. 设置 Docker Buildx（支持多平台构建）
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    # 3. 缓存 Docker 层以加速构建（可选）
     - name: Cache Docker layers
       uses: actions/cache@v2
       with:
@@ -26,16 +28,19 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-buildx-
 
+    # 4. 登录 Docker Hub（将凭证存储为 GitHub Secrets）
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    # 5. 构建 Docker 镜像
     - name: Build Docker image
       run: |
         docker build -t yourdockerusername/alist-proxy:${{ github.sha }} .
 
+    # 6. 推送 Docker 镜像到 Docker Hub
     - name: Push Docker image to Docker Hub
       run: |
         docker push yourdockerusername/alist-proxy:${{ github.sha }}
